[gd_scene load_steps=20 format=3 uid="uid://dbqdf1uj0xkqe"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1"]
[ext_resource type="SpriteFrames" uid="uid://b1qiqx3mf8fac" path="res://sprites/goblin-brown.tres" id="2"]
[ext_resource type="SpriteFrames" uid="uid://rsw6y3slvct4" path="res://sprites/death-anim.tres" id="3"]
[ext_resource type="AudioStream" uid="uid://dpgywoxgbgnhq" path="res://sounds/bombdrop.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://dbyikjjemja8q" path="res://sounds/hahaha.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://bgf64nqkwgxy2" path="res://sounds/yoohoo.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://b716hndvpkmif" path="res://sounds/iamback.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://4rp5yowc6qtc" path="res://sounds/pickup.wav" id="8"]

[sub_resource type="Animation" id="1"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="2"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 4]
}

[sub_resource type="Animation" id="3"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="4"]
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [7, 8, 9]
}

[sub_resource type="Animation" id="5"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="6"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5, 6]
}

[sub_resource type="Animation" id="7"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_is3ut"]
_data = {
"death": SubResource("1"),
"down": SubResource("2"),
"down_idle": SubResource("3"),
"side": SubResource("4"),
"side_idle": SubResource("5"),
"up": SubResource("6"),
"up_idle": SubResource("7")
}

[sub_resource type="Animation" id="8"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0]
}

[sub_resource type="Animation" id="9"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.501961, 1, 1, 1), Color(1, 0.501961, 1, 1), Color(1, 1, 0.501961, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1w73a"]
_data = {
"blink": SubResource("8"),
"modulate": SubResource("9")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1")

[node name="CharSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2")
animation = &"down_idle"

[node name="DeathSprite" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
sprite_frames = ExtResource("3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-15.75, -7.75, -15.75, 7.75, -7.75, 15.75, 7.75, 15.75, 15.75, 7.75, 15.75, -7.75, 7.75, -15.75, -7.75, -15.75)

[node name="ActionAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_is3ut")
}
autoplay = "down_idle"

[node name="StatusAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1w73a")
}

[node name="TimerPowerup" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="TimerRespawn" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SoundEffects" type="Node2D" parent="."]

[node name="bombdrop" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("4")

[node name="death" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("5")

[node name="respawn1" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("6")

[node name="respawn2" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("7")

[node name="pickup" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("8")

[connection signal="animation_finished" from="ActionAnimations" to="." method="_on_ActionAnimations_finished"]
[connection signal="timeout" from="TimerPowerup" to="." method="_on_TimerPowerup_timeout"]
[connection signal="timeout" from="TimerRespawn" to="." method="_on_TimerRespawn_timeout"]
